# Natural-Language-Date-Parser

./: README.md
nldate/: pyproject.toml  repo_url.txt
src/nldate/: parser.py
tests/: test_parser.py
